syntax = "proto3";

option csharp_namespace = "Catalog.Api.Grpc";

package greet;

// The greeting service definition.
service Catalog {
  // Sends a greeting
  rpc SayHello (SimpleRequest) returns (SimpleResponse);
}

// The request message containing the user's name.
message SimpleRequest {
  string name = 1;
}

// The response message containing the greetings.
message SimpleResponse {
  string message = 1;
}
